# Trading-engine

./: .env.example  .gitattributes  .github_pr_999.md  .gitignore  .pr_body_1039.md  AGENTS.md  Dockerfile  README.md  ROADMAP_MASTER.md  RUNBOOK.md  conftest.py  docker-compose.yml  ops_p60_issue_body.txt  pr_body.md  pr_body_604.md  pr_body_605.md  pr_body_606.md  pr_body_607.md  pr_issue_935.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.codex/: config.md  config.toml  review-1040.md
.devcontainer/: devcontainer.json
.github/: pr-927-body.md  pull_request_template.md
.venv311/: pyvenv.cfg
api/: __init__.py  main.py  test_runtime_lifecycle.py
docs/: GETTING_STARTED.md  OWNER_RUNBOOK.md  P9_A1_repo_inventory.md  RUNBOOK.md  access-policy.md  access-smoke-check.md  analyst-workflow.md  api_cookbook.md  determinism_audit.md  documentation_landscape_audit.md  health.md  index.md  ingestion_snapshot_job.md  local_run.md  mvp_v1.md  numeric_output_precision.md  phase-11-kickoff.md  phase-6-exit-criteria.md  phase-9-exit.md  quickstart.md  repo-hygiene-audit.md  repo-snapshot.md  runtime_status_and_health.md  smoke-run.md  strategy-configs.md  strategy_lifecycle_model.md  testing.md
documentation/: breaking-change-regeln.md
engine/: performance_report.py  trade_attribution.py  trade_ledger.py
frontend/: package-lock.json  package.json  tsconfig.json
schemas/: metrics-result.schema.json  signal-output.schema.v0.json
scripts/: capture_restart_evidence.py  create_demo_snapshot.py  data_quality_report.py  export_openapi.py  generate_weekly_review.py  run_daily_bounded_paper_runtime.py  run_paper_execution_cycle.py  run_post_run_reconciliation.py  run_snapshot_ingestion.py  validate_staging_deployment.py
tests/: .tmp_issue955_targeted_output.txt  backtest_test_strategies.py  conftest.py  health_endpoint.py  health_evaluator.py  issue955_review_package.txt  test_analysis_run_evidence_persistence.py  test_analysis_run_ids.py  test_api_backtest_entry_read.py  test_api_decision_card_inspection_read.py  test_api_execution_orders_read.py  test_api_ingestion_runs_read.py  test_api_manual_analysis_trigger.py  test_api_metrics.py  test_api_paper_inspection_read.py  test_api_paper_runtime_evidence_series_docs.py  test_api_paper_runtime_evidence_series_read.py  test_api_phase39_chart_contract.py  test_api_portfolio_positions_read.py  test_api_screener_results_read.py  test_api_signal_decision_surface.py  test_api_signals_read.py  test_api_signals_read_v1.py  test_api_smoke_engine_db_api.py  test_api_snapshot_first_enforcement.py  test_api_strategy_analyze_presets.py  test_api_system_state.py  test_api_trading_core_inspection_read.py  test_api_watchlists.py  test_archive_deprecation_standard_docs.py  test_atr_position_sizing.py  test_backtest_cli.py  test_backtest_determinism_smoke.py  test_backtest_evidence_docs.py  test_backtest_realism_boundary_contract_docs.py  test_bounded_alert_delivery_channels_docs.py  test_bounded_paper_runtime_evidence_series_runbook_docs.py  test_canonicalization_utils.py  (+94 more)
(+635 files in other folders)
