[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cilly-trading"
dynamic = ["version"]
description = "Cilly Trading engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "numpy",
  "requests",
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "aiosqlite",
  "yfinance",
  "ccxt",
  "httpx",
]

[project.optional-dependencies]
test = [
  "pytest",
]
monitoring = [
  "prometheus-client>=0.20",
]
postgresql = [
  "psycopg2-binary>=2.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cilly_trading*"]

[tool.setuptools.dynamic]
version = {attr = "cilly_trading.version.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
