[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cilly-trading"
dynamic = ["version"]
description = "Cilly Trading engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.0,<4.0",
  "numpy>=1.24,<3.0",
  "fastapi>=0.100,<1.0",
  "uvicorn[standard]>=0.23,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "aiosqlite>=0.19,<1.0",
  "yfinance>=0.2.28,<1.0",
  "ccxt>=4.0,<5.0",
  "httpx>=0.24,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cilly_trading*"]

[tool.setuptools.dynamic]
version = {attr = "cilly_trading.version.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/tests/*",
    "src/api/test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]
